Add BookShelfs into Project with all layers Repository, Services, Controllers, Mappers and Relations to other Objects etc.